@@ -4,3 +4,4 @@
 Initial version using the Meson build system and containing:
   - FreeType2 font provider
   - PNG image provider
+  - FFmpeg video provider
